@@ -90,7 +90,7 @@ public class LocalBackupStorage implements BackupStorage {
                 throw new RuntimeException("Failed to complete the backup for " + buildWorld.getName());
             }
 
-            plugin.getLogger().info(String.format("Backed up world '%s'. Took %sms", buildWorld.getName(), (System.currentTimeMillis() - timestamp)));
+            plugin.getLogger().info("Backed up world '%s'. Took %sms".formatted(buildWorld.getName(), (System.currentTimeMillis() - timestamp)));
             return new BackupImpl(
                     plugin.getBackupService().getProfile(buildWorld),
                     timestamp,
